<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fi.tut.student.suvanto.simplecalc.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/calc_grid">

            <EditText
                android:id="@+id/et_plus1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tv_plussign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/plussign" />

            <EditText
                android:id="@+id/et_plus2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="0"
                android:onClick="plus"
                android:text="@string/calc" />

            <TextView
                android:id="@+id/tv_plusresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="0"
                android:text="" />

            <EditText
                android:id="@+id/et_minus1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tv_minussign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/minussign" />

            <EditText
                android:id="@+id/et_minus2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="1"
                android:onClick="minus"
                android:text="@string/calc" />

            <TextView
                android:id="@+id/tv_minusresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="1"
                android:text="" />

            <EditText
                android:id="@+id/et_multi1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tv_multisign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:text="@string/multisign" />

            <EditText
                android:id="@+id/et_multi2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="2"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/btn_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="2"
                android:onClick="multi"
                android:text="@string/calc" />

            <TextView
                android:id="@+id/tv_multiresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="2"
                android:text="" />

            <EditText
                android:id="@+id/et_div1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tv_divsign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:text="@string/divsign" />

            <EditText
                android:id="@+id/et_div2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="3"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="3"
                android:onClick="div"
                android:text="@string/calc" />

            <TextView
                android:id="@+id/tv_divresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="3"
                android:text="" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clearFields"
                android:text="@string/clear" />

            <Button
                android:id="@+id/btn_showlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showLog"
                android:text="@string/showlog" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
